<resources>
    <string name="app_name">Effective Mobile Test Work</string>
    <string name="shorter">Короче</string>
    <string name="subscriptions">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="hotels">Отели</string>
    <string name="avia">Авиабилеты</string>
    <string name="avia_title">Поиск дешевых\nавиабилетов</string>
    <string name="hint_for_from">Откуда - Москва</string>
    <string name="hint_for_to">Куда - Турция</string>
    <string name="russian_alphabet">абвгдеёжзийклмнопрстуфхцчшщъыьэюя АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ</string>
    <string name="music_title">Музыкально отлететь</string>
    <string name="hard_route">Сложный\nмаршрут</string>
    <string name="everywhere">Куда угодно</string>
    <string name="weekend">Выходные</string>
    <string name="hot_tickets">Горячие\nбилеты</string>
    <string name="istanbul">Стамбул</string>
    <string name="popular_route">Популярное направление</string>
    <string name="phuket">Пхукет</string>
    <string name="sochi">Сочи</string>
    <string name="back">обратно</string>
    <string name="econom">1,эконом</string>
    <string name="filter">фильтр</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="show_all_tickets">Показать все</string>
    <string name="look_at_all_tickets">Посмотреть все билеты</string>
    <string name="subscribe_to_price">Подписка на цену</string>
    <string name="passengers">, 1 пассажир</string>
    <string name="price_chart">График цен</string>
    <string name="filter_first_cap">Фильтр</string>
</resources>