<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".avia.ui.SelectedCountryFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/searchBackplate"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:backgroundTint="@color/grey_2"
        app:cardElevation="0dp"
        app:cardCornerRadius="16dp"/>

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/searchDivider"
        app:layout_constraintStart_toStartOf="@id/searchDivider"
        android:layout_marginBottom="11dp"
        android:textSize="16sp"
        android:fontFamily="@font/sf_semibold"
        android:textColor="@color/white"
        tools:text="Минск"
        />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchDivider"
        app:layout_constraintStart_toStartOf="@id/searchDivider"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:fontFamily="@font/sf_semibold"
        android:textColor="@color/white"
        tools:text="Сочи"
        />

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/searchBackplate"
        app:layout_constraintBottom_toBottomOf="@id/searchBackplate"
        app:layout_constraintStart_toStartOf="@id/searchBackplate"
        android:layout_marginStart="13dp"
        android:src="@drawable/iconback_arrow"
        />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/searchDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        app:dividerColor="@color/grey_4"
        app:layout_constraintEnd_toEndOf="@id/searchBackplate"
        app:layout_constraintStart_toEndOf="@id/arrowBack"
        app:layout_constraintTop_toTopOf="@id/searchBackplate" />

    <ImageView
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/cross"
        app:layout_constraintBottom_toBottomOf="@id/searchBackplate"
        app:layout_constraintEnd_toEndOf="@id/searchBackplate" />

    <ImageView
        android:id="@+id/changeDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/change_direction"
        app:layout_constraintTop_toTopOf="@id/searchBackplate"
        app:layout_constraintEnd_toEndOf="@id/searchBackplate" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchBackplate"
        app:layout_constraintStart_toStartOf="@id/start_guideline">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/plus"
                android:drawablePadding="8dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:fontFamily="@font/sf_regular_italic"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/back"
                android:background="@drawable/rectangle_round_50"
                android:backgroundTint="@color/grey_2"
                android:layout_marginTop="13dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/sf_regular_italic"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="24 фев, сб"
                android:maxLines="1"
                android:background="@drawable/rectangle_round_50"
                android:backgroundTint="@color/grey_2"
                android:layout_marginTop="13dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/people"
                android:drawablePadding="11dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/sf_regular_italic"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/econom"
                android:maxLines="1"
                android:background="@drawable/rectangle_round_50"
                android:backgroundTint="@color/grey_2"
                android:layout_marginTop="13dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/filter"
                android:drawablePadding="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/sf_regular_italic"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/filter"
                android:maxLines="1"
                android:background="@drawable/rectangle_round_50"
                android:backgroundTint="@color/grey_2"
                android:layout_marginTop="13dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="10dp"
                />



        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>